--- a/jdk1.7/pom.xml
+++ b/jdk1.7/pom.xml
@@ -13,8 +13,13 @@
   <name>jdk1.7</name>
   <url>http://maven.apache.org</url>
   <properties>
+
+    <java.version>1.7</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
   </properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -23,4 +28,25 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+
+
+  <build>
+    <plugins>
+      <!-- 编译插件, 设定JDK版本 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <encoding>${project.build.sourceEncoding}</encoding>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+          <showDeprecation>true</showDeprecation>
+          <showWarnings>true</showWarnings>
+          <debug>true</debug>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
